Add Tiramisu and Doc title

--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin's Burger</title>
 </head>
 <body>
-    <h1>Hamburgers with Grilled Apple and Chili Crisp</h1>
+    <h1>Odin's Burger</h1>
     <img src="https://www.allrecipes.com/thmb/6FrDWEHpkkTvA9pRVFMT84OBSSE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8637636_Hamburgers-with-Grilled-Apple-and-Chili-Crisp_Dotdash-Meredith-Food-Studios_4x3-9bfefd1cbcaa42648e0a4719b741aafa.jpg" alt="Picture of Odin's Hamburger">
 
     <h4>Hamburgers with Grilled Apple and Chili Crisp</h4>
-        <p>These hamburgers with grilled apple and chili crisp are juicy and delicious. For your summer grilling, level up beef patties with grilled sweet-tart apples and thick-cut onions and chili-crisp mayo. <br> <br>
+        <p>These hamburgers with grilled apple and chili crisp are juicy and delicious. For your summer grilling, level up beef patties with grilled sweet-tart apples and thick-cut onions and chili-crisp mayo. <br>
             <h4>Ingredients</h4>
                 <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, these are the ingredients you'll need to add to your grocery list:</p>
                 <ul>
