--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin's Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna recipe</h1>
+    <h1>Odin's Lasagna</h1>
     <img src="https://www.allrecipes.com/thmb/BKa1OqunLWMkCDJm_3LtxF_Pn88=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" alt="Picture of Odin's Lasagna">
 
     <h4>The World's Best Lasagna</h4>
-        <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old — read all about his life and legacy here. <br> <br>
+        <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old — read all about his life and legacy here. <br>
         Make our most popular lasagna today to find out what all the fuss is about!</p>
             <h4>Ingredients</h4>
                 <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, these are the ingredients you'll need to add to your grocery list:</p>
