Add some basic CSS

--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -7,6 +7,7 @@
     <title>Odin Mom's Tiramisu</title>
 </head>
 <body>
+    <div>
     <h1>Odin Mom's Tiramisu</h1>
     <img src="https://www.allrecipes.com/thmb/RDDW2L7B9I_XLiregXAjfSWrEd4=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/21412-tiramisu-ii-DDMFS-4x3-cb78d4ad0e75477ebc2a16968c508fde.jpg" alt="Picture of Tiramisu">
 
@@ -36,5 +37,6 @@
                     <li> <strong>Assemble the Tiramisu</strong>: Line the bottom of a baking dish with soaked ladyfingers. Spread half of the mascarpone mixture over the ladyfingers, then half of the whipped cream over that. Repeat in the same order. Dust with cocoa powder.</li>
                 </ol>
     <a href="../index.html">Home</a>
+    </div>
 </body>
 </html>
