--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-        <ul>
+    <h1 id="homepage-title">Odin Recipes</h1>
+        <ul id="home-list">
             <li><a href="recipes/lasagna.html">Odin's Lasagna</a></li>
             <li><a href="recipes/hamburger.html">Odin's Burger</a></li>
             <li><a href="recipes/tiramisu.html">Odin's Mom Tiramisu</a></li>
