--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+    <div>
     <h1>Odin's Burger</h1>
     <img src="https://www.allrecipes.com/thmb/6FrDWEHpkkTvA9pRVFMT84OBSSE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8637636_Hamburgers-with-Grilled-Apple-and-Chili-Crisp_Dotdash-Meredith-Food-Studios_4x3-9bfefd1cbcaa42648e0a4719b741aafa.jpg" alt="Picture of Odin's Hamburger">
 
@@ -34,5 +35,6 @@
                     <li>Stir mayonnaise and remaining 2 teaspoons chili crisp together in a small bowl. Spread buns with mayonnaise mixture and fill with patties, onion, and apple slices. Serve with additional chili crisp</li>
                 </ol>
     <a href="../index.html">Home</a>
+    </div>
 </body>
 </html>
